fix spacing issues with divs

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ grid-area: a1;
 
 .sweaterweather{
   margin-left: 80px;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   /* border-style: solid;
   border-color: white; */
   height: 200px;
@@ -97,7 +97,7 @@ grid-area: a1;
 
 .sweaterweather img{
   width: 300px;
-  height: 200px;
+  height: 179.52px;
 }
 
 .koroibos{
@@ -116,7 +116,8 @@ grid-area: a1;
 
 .bfield{
   margin-left: 80px;
-  margin-top: 50px;
+  margin-top: 30px;
+  /* margin-top: 50px; */
   /* border-style: solid;
   border-color: white; */
   height: 200px;
